syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AddNoGachaAvatarCardTransferItem.proto";


message AddNoGachaAvatarCardNotify {
	bool is_transfer_to_item = 5;
	uint32 initial_promote_level = 2;
	uint32 initial_level = 8;
	uint32 item_id = 1;
	uint32 reason = 6;
	uint32 avatar_id = 14;
	repeated AddNoGachaAvatarCardTransferItem transfer_item_list = 13;
}