syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message EntityRendererChangedInfo {
	bool is_cached = 3;
	uint32 visibility_count = 2;
	map<string, uint32> changed_renderers = 1;
}