syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "EntityRendererChangedInfo.proto";
import "ForwardType.proto";


message EvtEntityRenderersChangedNotify {
	bool is_server_cache = 14;
	uint32 entity_id = 6;
	ForwardType forward_type = 9;
	EntityRendererChangedInfo renderer_changed_info = 8;
}